[tool.poetry]
name = "meal-planner"
version = "1.8.1"
description = ""
authors = ["Diego Alloza González <sralloza@gmail.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
APScheduler = "^3.8.0"
boto3 = "^1.18.52"
fastapi = "^0.69.0"
greenlet = "^1.1.2"
PyMySQL = "^1.0.2"
python = ">=3.7,<3.10"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
SQLAlchemy = "^1.4.25"
SQLAlchemy-Utils = "^0.37.8"
starlette-prometheus = "^0.8.0"
todoist-python = "^8.1.3"
toml = "^0.10.2"
uvicorn = "^0.15.0"
alembic = "^1.7.4"

[tool.poetry.dev-dependencies]
"ruamel.yaml" = "^0.17.16"
autoflake = "^1.4"
black = "^21.9b0"
flake8 = "^3.8.4"
isort = "^5.9.3"
mkdocs-material = "^7.3.2"
mypy = "^0.790"
pytest = "^5.2"
pytest-cov = "^2.10.1"
python-dateutil = "^2.8.2"
pylint = "^2.11.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
